--- a/tmpl/Index.tmpl
+++ b/tmpl/Index.tmpl
@@ -8,14 +8,13 @@
 		<% template css_links() %>
 			<% include template_view::css_links() %>
 			<link href="/css/index.css" rel="stylesheet" type="text/css" />
-			<link href="/css/information_footer.css" rel="stylesheet" type="text/css" />
 		<% end template %>
 	
 	
 		<% template page_content() %>
-			<div class="wrapper">
 			<% include template_view::header_bar() %>
-			<div id="main_content_container">
+			<div id="pci_index_main_container">
+				Comienzo content
 				<br />
 				<br />
 				<br />
@@ -25,7 +24,6 @@
 				<br />
 			</div>
 			<% include template_view::information_footer() %>
-			</div>
 		<% end template %>
 	
 	
