--- a/tmpl/SignIn.tmpl
+++ b/tmpl/SignIn.tmpl
@@ -7,17 +7,16 @@
 	
 		<% template css_links() %>
 			<% include template_view::css_links() %>
-			<link href="/css/header_bar.css" rel="stylesheet" type="text/css" />
-			<link href="/css/navigation_menu.css" rel="stylesheet" type="text/css" />
+			<link href="/css/sign_in.css" rel="stylesheet" type="text/css" />
 		<% end template %>
 	
 	
 		<% template page_content() %>
 			<% include template_view::header_bar() %>
 			<% include template_view::navigation_menu() %>
-			<div id="main_content_container">
-				<div class="pci_box_2" >
-					<h1>Sign in</h1>
+			<div id="pci_sign_in_main_container">
+				<div class="pci_box_9">
+					<h1>Ingrese sus datos</h1>
 					<form action="" method="post">
 						<% form as_p form_info %>
 					</form>
