--- a/www/css/problem.css
+++ b/www/css/problem.css
@@ -1,10 +1,4 @@
 
-/*
-----------------------------------------------------------------------------------------------
-	Problem
-----------------------------------------------------------------------------------------------
-*/
-
 body {
 	background-color:#F1F1F1;
 }
@@ -17,7 +11,7 @@ body {
 #pci_problem_header_container {
 	clear:both;
 	float:left;
-	width:544px;
+	width:60%;
 }
 
 #pci_problem_problem_container {
