--- a/tmpl/Template.tmpl
+++ b/tmpl/Template.tmpl
@@ -11,12 +11,12 @@
 				<div class="pci_clarifications_row_container">
 					<div class="pci_clarifications_question_container">
 						<div class="pci_clarifications_column_header pci_clarifications_question_content">
-							Question
+							Pregunta
 						</div>
 					</div>
 					<div class="pci_clarifications_answer_container">
 						<div class="pci_clarifications_answer_content pci_clarifications_column_header">
-							Answer
+							Respuesta
 						</div>
 					</div>
 				</div>
@@ -36,7 +36,7 @@
 						</div>
   					<% end %>
 				<% empty %>
-					There are are no clarifications
+					Aún no hay aclaraciones
 				<% end %>
 			</div>
 		<% end template %>
