--- a/tmpl/Template.tmpl
+++ b/tmpl/Template.tmpl
@@ -81,8 +81,8 @@
 		<% template information_footer() %>
 			<div id="pci_information_footer_main_container">
 				<div id="pci_information_footer_central_container">
-					<div id="pci_information_footer_TO_DEFINE_container">
-						Some information
+					<div id="pci_information_footer_logo_extended_container">
+						<div id="pci_information_footer_logo_extended"></div>
 					</div>
 					<div id="pci_information_footer_link_container">
 						<div class="pci_information_footer_column_container">
@@ -96,7 +96,7 @@
 							</div>
 							<div class="pci_information_footer_link">
 								<a class="pci_link_0" href="<% url "" %>">
-									Link 2
+									Filosofía
 								</a>
 							</div>
 							<div class="pci_information_footer_link">
