Templates + CSS changes

--- a/tmpl/Ideas.tmpl
+++ b/tmpl/Ideas.tmpl
@@ -22,7 +22,7 @@
 			<% include template_view::header_bar() %>
 			<% include template_view::navigation_menu() %>
 			<div id="pci_ideas_main_container">
-				<div class="pci_box_9">
+				<div class="pci_box_container">
 					Ideas content
 				</div>
 			</div>
