--- a/tmpl/NewProblem.tmpl
+++ b/tmpl/NewProblem.tmpl
@@ -15,9 +15,11 @@
 			<% include template_view::header_bar() %>
 			<% include template_view::navigation_menu() %>
 			<div id="pci_new_problem_main_container">
-				<form action="" method="post">
-					<% form as_p form_info %>
-				</form>
+				<div class="pci_box_container">
+					<form action="" method="post">
+						<% form as_p form_info %>
+					</form>
+				</div>
 			</div>
 		<% end template %>
 		
