--- a/tmpl/SignIn.tmpl
+++ b/tmpl/SignIn.tmpl
@@ -15,18 +15,13 @@
 			<% include template_view::header_bar() %>
 			<% include template_view::navigation_menu() %>
 			<div id="pci_sign_in_main_container">
-				<div class="pci_box_9">
+				<div class="pci_box_container">
 					<h1>Ingrese sus datos</h1>
 					<form action="" method="post">
 						<% form as_p form_info %>
 					</form>
 				</div>
 			</div>
-		<% end template %>
-		
-		
-		<% template render_input() %>
-	
 		<% end template %>
 	
 	<% end view %>
