--- a/tmpl/SignUp.tmpl
+++ b/tmpl/SignUp.tmpl
@@ -15,7 +15,7 @@
 			<% include template_view::header_bar() %>
 			<% include template_view::navigation_menu() %>
 			<div id="pci_sign_up_main_container">
-				<div class="pci_box_9">
+				<div class="pci_box_container">
 					<h1>Registrar</h1>
 					<form action="" method="post">
 						<% form as_p form_info %>
