--- a/tmpl/Solution.tmpl
+++ b/tmpl/Solution.tmpl
@@ -15,11 +15,26 @@
 			<% include template_view::header_bar() %>
 			<% include template_view::navigation_menu() %>
 			<div id="pci_solution_main_container">
-				<div class="pci_box_0">
-					<%= solution->content %>
+				<div class="pci_box_container">
+					<div id="pci_solution_toolbar_container">
+						<a href="<% url "/problem" %>">
+							<div class="pci_button_icon pci_solution_toolbar_button" id="pci_solution_toolbar_go_back_button">
+								Volver al problema
+							</div>
+						</a>
+					</div>
+					<div class="pci_horizontal_line"></div>
+					<div id="pci_solution_header_container">
+						<h2>
+							<%= solution->description %>
+						</h2>
+					</div>
+					<div class="pci_box_content" id="pci_solution_solution_content">
+						<%= solution->content %>
+					</div>
+					<% include template_view::clarifications(clarifications) %>
 				</div>
 			</div>
-			<% include template_view::clarifications(clarifications) %>
 		<% end template %>
 	
 	
