--- a/tmpl/NewSolution.tmpl
+++ b/tmpl/NewSolution.tmpl
@@ -7,21 +7,19 @@
 	
 		<% template css_links() %>
 			<% include template_view::css_links() %>
-			
-			// TODO: make css if distinct from new problem
-			<!-- <link href="/css/new_solution.css" rel="stylesheet" type="text/css" /> -->
-			
-			<link href="/css/new_problem.css" rel="stylesheet" type="text/css" />
+			<link href="/css/new_solution.css" rel="stylesheet" type="text/css" />
 		<% end template %>
 	
 	
 		<% template page_content() %>
 			<% include template_view::header_bar() %>
 			<% include template_view::navigation_menu() %>
-			<div id="pci_new_problem_main_container">
-				<form action="" method="post">
-					<% form as_p form_info %>
-				</form>
+			<div id="pci_new_solution_main_container">
+				<div class="pci_box_container">
+					<form action="" method="post">
+						<% form as_p form_info %>
+					</form>
+				</div>
 			</div>
 		<% end template %>
 		
