--- a/tmpl/Problem.tmpl
+++ b/tmpl/Problem.tmpl
@@ -15,47 +15,50 @@
 			<% include template_view::header_bar() %>
 			<% include template_view::navigation_menu() %>
 			<div id="pci_problem_main_container">
-				<div id="pci_problem_header_container">
-					<h2>
-						<%= problem->description %>
-					</h2>
-				</div>
-				<div id="pci_problem_problem_container">
-					<div class="pci_box_0" id="pci_problem_problem_content">
-						<%= problem->content %>
-					</div>
-				</div>
-				<div id="pci_problem_solution_container">
-					<% if problem->is_solved  %>
-						<a class="pci_box_6" href="<% url "/solution" using accepted_solution->id %>">
-							<div class="pci_box_6 pci_problem_solution_description">
-								<%= accepted_solution->description %>
-							</div>
-						</a>
-					<% end %>
+				<div class="pci_box_container">
 					<% if user_signed_in %>
-						<a href="<% url "/new_solution" using problem->id %>" >
-							<div class="pci_box_7">
-								<div class="pci_button_2" >
-									Plantear solucion
-								</div>
-							</div>
-						</a>
-					<% end %>
-					<% foreach solution in *solutions %>
-	 					<% item %>
-	 						<a class="pci_box_4" href="<% url "/solution" using solution->id %>">
-								<div class="pci_box_4 pci_problem_solution_description">
-									<%= solution->description %>
+						<div id="pci_problem_toolbar_container">
+							<a href="<% url "/new_solution" using problem->id %>">
+								<div class="pci_button_icon pci_problem_toolbar_button" id="pci_problem_toolbar_new_solution_button">
+									Plantear solución
 								</div>
 							</a>
-	  					<% end %>
-					<% empty %>
-						Aún no hay soluciones
+						</div>
+						<div class="pci_horizontal_line"></div>
 					<% end %>
+					<div id="pci_problem_header_container">
+						<h2>
+							<%= problem->description %>
+						</h2>
+					</div>
+					<div id="pci_problem_problem_container">
+						<div class="pci_box_content" id="pci_problem_problem_content">
+							<%= problem->content %>
+						</div>
+					</div>
+					<div id="pci_problem_solution_container">
+						<% if problem->is_solved  %>
+							<a class="pci_box_description" href="<% url "/solution" using accepted_solution->id %>">
+								<div class="pci_box_description pci_problem_solution_description">
+									<%= accepted_solution->description %>
+								</div>
+							</a>
+						<% end %>
+						<% foreach solution in *solutions %>
+		 					<% item %>
+		 						<a class="pci_box_description" href="<% url "/solution" using solution->id %>">
+									<div class="pci_box_description pci_problem_solution_description">
+										<%= solution->description %>
+									</div>
+								</a>
+		  					<% end %>
+						<% empty %>
+							Aún no hay soluciones
+						<% end %>
+					</div>
+					<% include template_view::clarifications(clarifications) %>
 				</div>
 			</div>
-			<% include template_view::clarifications(clarifications) %>
 		<% end template %>
 		
 	
