--- a/tmpl/Template.tmpl
+++ b/tmpl/Template.tmpl
@@ -24,12 +24,12 @@
  					<% item %>
 						<div class="pci_clarifications_row_container">
 							<div class="pci_clarifications_question_container">
-								<div class="pci_box_3 pci_clarifications_question_content">
+								<div class="pci_box_content pci_clarifications_question_content">
 									<%= clarification->question %>
 								</div>
 							</div>
 							<div class="pci_clarifications_answer_container">
-								<div class="pci_box_5 pci_clarifications_answer_content">
+								<div class="pci_box_content pci_clarifications_answer_content">
 									<%= clarification->answer %>
 								</div>
 							</div>
@@ -50,8 +50,8 @@
 					</div>
 					<div id="pci_header_bar_button_container">
 					 	<% if user_signed_in %>
-							<a class="pci_button_0" href="<% url "/sign_out" %>">
-								<div class="pci_button_0 pci_header_bar_button">
+							<a class="pci_button_classic" href="<% url "/sign_out" %>">
+								<div class="pci_button_classic pci_header_bar_button">
 									Salir
 								</div>
 							</a>
@@ -61,13 +61,13 @@
 					 			</span>
 				 			</div>
 						<% else %>
-							<a class="pci_button_0" href="<% url "/sign_in" %>">
-								<div class="pci_button_0 pci_header_bar_button">
+							<a class="pci_button_classic" href="<% url "/sign_in" %>">
+								<div class="pci_button_classic pci_header_bar_button">
 									Ingresar
 								</div>
 							</a>
-							<a class="pci_button_0" href="<% url "/sign_up" %>">
-								<div class="pci_button_0 pci_header_bar_button">
+							<a class="pci_button_classic" href="<% url "/sign_up" %>">
+								<div class="pci_button_classic pci_header_bar_button">
 									Registrar
 								</div>
 							</a>
@@ -90,17 +90,17 @@
 								PCI
 							</div>
 							<div class="pci_information_footer_link">
-								<a class="pci_link_0" href="<% url "" %>">
+								<a class="pci_link_footer" href="<% url "" %>">
 									Acerca de
 								</a>
 							</div>
 							<div class="pci_information_footer_link">
-								<a class="pci_link_0" href="<% url "" %>">
+								<a class="pci_link_footer" href="<% url "" %>">
 									Filosofía
 								</a>
 							</div>
 							<div class="pci_information_footer_link">
-								<a class="pci_link_0" href="<% url "" %>">
+								<a class="pci_link_footer" href="<% url "" %>">
 									Link 3
 								</a>
 							</div>
@@ -110,17 +110,17 @@
 								Header 2
 							</div>
 							<div class="pci_information_footer_link">
-								<a class="pci_link_0" href="<% url "" %>">
+								<a class="pci_link_footer" href="<% url "" %>">
 									Link 1
 								</a>
 							</div>
 							<div class="pci_information_footer_link">
-								<a class="pci_link_0" href="<% url "" %>">
+								<a class="pci_link_footer" href="<% url "" %>">
 									Link 2
 								</a>
 							</div>
 							<div class="pci_information_footer_link">
-								<a class="pci_link_0" href="<% url "" %>">
+								<a class="pci_link_footer" href="<% url "" %>">
 									Link 3
 								</a>
 							</div>
@@ -130,17 +130,17 @@
 								Header 3
 							</div>
 							<div class="pci_information_footer_link">
-								<a class="pci_link_0" href="<% url "" %>">
+								<a class="pci_link_footer" href="<% url "" %>">
 									Link 1
 								</a>
 							</div>
 							<div class="pci_information_footer_link">
-								<a class="pci_link_0" href="<% url "" %>">
+								<a class="pci_link_footer" href="<% url "" %>">
 									Link 2
 								</a>
 							</div>
 							<div class="pci_information_footer_link">
-								<a class="pci_link_0" href="<% url "" %>">
+								<a class="pci_link_footer" href="<% url "" %>">
 									Link 3
 								</a>
 							</div>
@@ -150,17 +150,17 @@
 								Soporte
 							</div>
 							<div class="pci_information_footer_link">
-								<a class="pci_link_0" href="<% url "" %>">
+								<a class="pci_link_footer" href="<% url "" %>">
 									Ayuda
 								</a>
 							</div>
 							<div class="pci_information_footer_link">
-								<a class="pci_link_0" href="<% url "" %>">
+								<a class="pci_link_footer" href="<% url "" %>">
 									Condiciones de servicio
 								</a>
 							</div>
 							<div class="pci_information_footer_link">
-								<a class="pci_link_0" href="<% url "" %>">
+								<a class="pci_link_footer" href="<% url "" %>">
 									Copyright
 								</a>
 							</div>
@@ -174,36 +174,23 @@
 		<% template navigation_menu() %>
 			<div id="pci_navigation_menu_main_container">
 				<a href="<% url "/problems" %>">
-					<div class="pci_button_1 pci_navigation_menu_button" id="pci_navigation_menu_problems_button">
+					<div class="pci_button_square pci_navigation_menu_button" id="pci_navigation_menu_problems_button">
 						Problemas
 					</div>
 				</a>
 				<a href="<% url "/ideas" %>">
-					<div class="pci_button_1 pci_navigation_menu_button" id="pci_navigation_menu_ideas_button">
+					<div class="pci_button_square pci_navigation_menu_button" id="pci_navigation_menu_ideas_button">
 						Ideas
 					</div>
 				</a>
 				<% if user_signed_in %>
 					<a href="<% url "/user" using user_name %>">
-						<div class="pci_button_1 pci_navigation_menu_button" id="pci_navigation_menu_profile_button">
+						<div class="pci_button_square pci_navigation_menu_button" id="pci_navigation_menu_profile_button">
 							Perfil
 						</div>
 					</a>
 				<% end %>
 			</div>
-		<% end template %>
-		
-		
-		<% template toolbar() %>
-			<% if user_signed_in %>
-				<div class="pci_box_7 pci_toolbar_main_container">
-					<a href="<% url "/new_problem" %>">
-						<div class="pci_button_2 pci_toolbar_button" id="pci_toolbar_new_problem_button">
-							Nuevo problema
-						</div>
-					</a>
-				</div>
-			<% end %>
 		<% end template %>
 
 
