--- a/tmpl/User.tmpl
+++ b/tmpl/User.tmpl
@@ -22,7 +22,7 @@
 			<% include template_view::header_bar() %>
 			<% include template_view::navigation_menu() %>
 			<div id="pci_user_main_container">
-				<div class="pci_box_8">
+				<div class="pci_box_container">
 					Nombre de usuario: <%= user->user_name %><br />
 					Nombre: <%= user->first_name %><br />
 					Apellido: <%= user->last_name %><br />
