--- a/www/css/template.css
+++ b/www/css/template.css
@@ -21,7 +21,7 @@ div {
 
 /* Remove this */
 text-decoration: none;
-font-family:pci_global_font;
+font-family:pci_font_global;
 text-shadow: 1px 1px #DDD;
 color: #333;
 }
@@ -31,27 +31,8 @@ a, a.active, a:visited {
 	color: #333;
 }
 
-
-/*
-----------------------------------------------------------------------------------------------
-	Fonts
-----------------------------------------------------------------------------------------------
-*/
-
-@font-face {
-	font-family:pci_global_font;
-	src:
-		local(Impact),
-		local(Haettenschweiler),
-		local("Franklin Gothic Bold"),
-		local(Charcoal),
-		local("Helvetica Inserat");
-}
-
-@font-face {
-	font-family:pci_link_0_font;
-	src:
-		local(Arial);
+h2 {
+	margin-top:16px;
 }
 
 
@@ -61,136 +42,57 @@ a, a.active, a:visited {
 ----------------------------------------------------------------------------------------------
 */
 
-div.pci_box_0 {
+@font-face {
+	font-family:pci_font_global;
+	src:
+		local(Impact),
+		local(Haettenschweiler),
+		local("Franklin Gothic Bold"),
+		local(Charcoal),
+		local("Helvetica Inserat");
+}
+
+@font-face {
+	font-family:pci_font_link_footer;
+	src:
+		local(Arial);
+}
+
+div.pci_box_container {
 	background-color:#FFFFFF;
 	border-color:#D0D0D0;
 	border-radius:8px;
 	border-style:solid;
 	border-width:1px;
+	overflow:hidden;
+	padding:16px;
+}
+
+div.pci_box_content {
+	border-color:#D0D0D0;
+	border-style:solid;
+	border-width:1px;
 	padding:8px;
 }
 
-div.pci_box_0:hover {
+div.pci_box_content:hover {
 	border-color:#B5B5B5;
 }
 
-a.pci_box_0 {
-	/* TO DEFINE */
-}
-
-div.pci_box_1 {
-	background-color:transparent;
-	border-radius:8px;
-	border-width:0px;
+div.pci_box_description {
 	box-shadow:0px 0px 5px 0px #979797 inset;
 	padding:8px;
 }
 
-div.pci_box_1:hover {
-	background-color:#dbe7e7;
+div.pci_box_description:hover {
+	background-color:#DBE7E7;
 }
 
-a.pci_box_1 {
-	/* TO DEFINE */
-	text-decoration: none;
-}
-
-div.pci_box_2 {
-	background-color:#FFFFFF;
-	border-color:#D0D0D0;
-	border-radius:8px;
-	border-style:solid;
-	border-width:1px;
-}
-
-div.pci_box_3 {
-	background-color:#FFFFFF;
-	border-color:#D0D0D0;
-	border-radius:8px;
-	border-style:solid;
-	border-width:1px;
-	padding:8px;
-}
-
-div.pci_box_3:hover {
-	border-color:#B5B5B5;
-}
-
-div.pci_box_4 {
-	background-color:#FFFFFF;
-	border-color:#D0D0D0;
-	border-radius:8px;
-	border-style:solid;
-	border-width:1px;
-	padding:8px;
-}
-
-div.pci_box_4:hover {
-	border-color:#B5B5B5;
-}
-
-a.pci_box_4 {
+a.pci_box_description {
 	/* TO DEFINE */
 }
 
-div.pci_box_5 {
-	background-color:#FFFFFF;
-	border-color:#D0D0D0;
-	border-radius:8px;
-	border-style:solid;
-	border-width:1px;
-	padding:8px;
-}
-
-div.pci_box_5:hover {
-	border-color:#B5B5B5;
-}
-
-div.pci_box_6 {
-	background-color:#00FF00;
-	border-color:#D0D0D0;
-	border-radius:8px;
-	border-style:solid;
-	border-width:1px;
-	padding:8px;
-}
-
-div.pci_box_6:hover {
-	border-color:#B5B5B5;
-}
-
-a.pci_box_6 {
-	/* TO DEFINE */
-}
-
-div.pci_box_7 {
-	background-color:#FFFFFF;
-	border-color:#D0D0D0;
-	border-radius:8px;
-	border-style:solid;
-	border-width:1px;
-	padding:8px;
-}
-
-div.pci_box_8 {
-	background-color:#FFFFFF;
-	border-color:#D0D0D0;
-	border-radius:8px;
-	border-style:solid;
-	border-width:1px;
-	padding:16px;
-}
-
-div.pci_box_9 {
-	background-color:#FFFFFF;
-	border-color:#D0D0D0;
-	border-radius:8px;
-	border-style:solid;
-	border-width:1px;
-	padding:8px;
-}
-
-div.pci_button_0 {
+div.pci_button_classic {
 	background-color:#FFFFFF;
 	border-color:#C2C2C2;
 	border-radius:8px;
@@ -202,16 +104,33 @@ div.pci_button_0 {
 	padding:0px 16px;
 }
 
-div.pci_button_0:hover {
+div.pci_button_classic:hover {
 	background-color:#F2F2F2;
 	border-color:#B5B5B5;
 }
 
-a.pci_button_0 {
+a.pci_button_classic {
 	/* TO DEFINE */
 }
 
-div.pci_button_1 {
+div.pci_button_icon {
+	background-color:#FFFFFF;
+	border-color:#D0D0D0;
+	border-radius:8px;
+	border-style:solid;
+	border-width:1px;
+	color:#7A7A7A;
+	font-size:0.875em;
+	height:38px;
+	line-height:38px;
+	padding:0px 16px 0px 48px;
+}
+
+div.pci_button_icon:hover {
+	box-shadow:0px 0px 64px 0px #FFF857 inset;
+}
+
+div.pci_button_square {
 	background-color:#FFFFFF;
 	border-color:#D0D0D0;
 	border-radius:8px;
@@ -225,12 +144,12 @@ div.pci_button_1 {
 	width:94px;
 }
 
-div.pci_button_1:hover {
+div.pci_button_square:hover {
 	border-color:#B5B5B5;
 	color:#444444;
 }
 
-div.pci_button_1.active {
+div.pci_button_square.active {
 	background-color:#FFFFFF;
 	border-color:#B5B5B5;
 	border-radius:8px;
@@ -244,19 +163,6 @@ div.pci_button_1.active {
 	width:94px;
 }
 
-div.pci_button_2 {
-	background-color:#FFFFFF;
-	border-color:#D0D0D0;
-	border-radius:8px;
-	border-style:solid;
-	border-width:1px;
-	color:#7A7A7A;
-	font-size:0.875em;
-	height:38px;
-	line-height:38px;
-	padding:0px 16px 0px 48px;
-}
-
 div.pci_horizontal_line {
 	border-color:#D3D3D3;
 	border-style:solid;
@@ -266,9 +172,9 @@ div.pci_horizontal_line {
 	width:100%;
 }
 
-a.pci_link_0 {
+a.pci_link_footer {
 	color: #333333;
-	font-family:pci_link_0_font;
+	font-family:pci_font_link_footer;
 	text-decoration:none;
 	text-shadow:1px 1px #DDDDDD;
 }
@@ -281,8 +187,6 @@ a.pci_link_0 {
 */
 
 #pci_clarifications_main_container {
-	min-width:912px;
-	padding:0px 128px 0px 240px;
 }
 
 div.pci_clarifications_row_container {
@@ -319,10 +223,8 @@ div.pci_clarifications_answer_content {
 */
 
 #pci_header_bar_main_container {
-	/*background-color:#6CA4C8;*/
-	background-color:#BA5151;
-	/*box-shadow:0px 1px 4px 0px #000000, 0px -4px 16px 0px #3D6A87 inset;*/
-	box-shadow:0px 1px 4px 0px #000000, 0px -4px 16px 0px #913F3F inset;
+	background-color:#6CA4C8;
+	box-shadow:0px 1px 4px 0px #000000, 0px -4px 16px 0px #3D6A87 inset;
 	height:48px;
 	position:fixed;
 	top:0px;
@@ -482,39 +384,4 @@ div.pci_navigation_menu_button {
 	background-position:center center;
 	background-repeat:no-repeat;
 	box-shadow:0px 0px 64px 0px #CCEACD inset;
-}
-
-
-/*
-----------------------------------------------------------------------------------------------
-	Toolbar
-----------------------------------------------------------------------------------------------
-*/
-
-div.pci_toolbar_main_container {
-	clear:both;
-	overflow:hidden;
-}
-
-div.pci_toolbar_button {
-	float:left;
-	margin-right:16px;
-}
-
-#pci_toolbar_new_problem_button {
-	background-image:url('../img/new_problem_grayscale.png');
-	background-position:left center;
-	background-repeat:no-repeat;
-}
-
-#pci_toolbar_new_problem_button:hover {
-	background-image:url('../img/new_problem_color.png');
-	box-shadow:0px 0px 64px 0px #FFF857 inset;
-}
-
-#pci_toolbar_new_problem_button.active {
-	background-image:url('../img/new_problem_color.png');
-	background-position:left center;
-	background-repeat:no-repeat;
-	box-shadow:0px 0px 64px 0px #FFF857 inset;
 }
