--- a/www/css/template.css
+++ b/www/css/template.css
@@ -20,15 +20,15 @@ div {
 	padding:0px;
 
 /* Remove this */
-text-decoration: none;
-font-family:pci_font_global;
+/*font-family:pci_font_global;
 text-shadow: 1px 1px #DDD;
-color: #333;
+color: #333;*/
 }
 
-a, a.active, a:visited {
+a, a:active, a:hover a:visited {
+	text-decoration:none;
 	/* Remove this */
-	color: #333;
+	/*color: #333;*/
 }
 
 h2 {
@@ -53,7 +53,49 @@ h2 {
 }
 
 @font-face {
+	font-family:pci_font_button_classic;
+	src:
+		local(Arial);
+}
+
+@font-face {
+	font-family:pci_font_button_icon;
+	src:
+		local(Arial);
+}
+
+@font-face {
+	font-family:pci_font_button_square;
+	src:
+		local(Arial);
+}
+
+@font-face {
+	font-family:pci_font_link_description;
+	src:
+		local(Arial);
+}
+
+@font-face {
 	font-family:pci_font_link_footer;
+	src:
+		local(Arial);
+}
+
+@font-face {
+	font-family:pci_font_link_user_name;
+	src:
+		local(Arial);
+}
+
+@font-face {
+	font-family:pci_font_text_description;
+	src:
+		local(Arial);
+}
+
+@font-face {
+	font-family:pci_font_text_footer;
 	src:
 		local(Arial);
 }
@@ -80,16 +122,13 @@ div.pci_box_content:hover {
 }
 
 div.pci_box_description {
+	color:#333333;
 	box-shadow:0px 0px 5px 0px #979797 inset;
 	padding:8px;
 }
 
 div.pci_box_description:hover {
-	background-color:#DBE7E7;
-}
-
-a.pci_box_description {
-	/* TO DEFINE */
+	background-color:#F9FFFF;
 }
 
 div.pci_button_classic {
@@ -99,18 +138,18 @@ div.pci_button_classic {
 	border-style:solid;
 	border-width:1px;
 	box-shadow:0px -4px 8px 0px #D1D1D1 inset;
+	color:#333333;
+	font-family:pci_font_button_classic;
+	font-size:0.875em;
 	height:26px;
 	line-height:28px;
 	padding:0px 16px;
+	text-shadow:1px 1px #DDDDDD;
 }
 
 div.pci_button_classic:hover {
 	background-color:#F2F2F2;
 	border-color:#B5B5B5;
-}
-
-a.pci_button_classic {
-	/* TO DEFINE */
 }
 
 div.pci_button_icon {
@@ -120,7 +159,8 @@ div.pci_button_icon {
 	border-style:solid;
 	border-width:1px;
 	color:#7A7A7A;
-	font-size:0.875em;
+	font-family:pci_font_button_icon;
+	font-size:0.9375em;
 	height:38px;
 	line-height:38px;
 	padding:0px 16px 0px 48px;
@@ -137,6 +177,7 @@ div.pci_button_square {
 	border-style:solid;
 	border-width:1px;
 	color:#7A7A7A;
+	font-family:pci_font_button_square;
 	font-size:0.875em;
 	height:26px;
 	padding-top:68px;
@@ -150,17 +191,7 @@ div.pci_button_square:hover {
 }
 
 div.pci_button_square.active {
-	background-color:#FFFFFF;
 	border-color:#B5B5B5;
-	border-radius:8px;
-	border-style:solid;
-	border-width:1px;
-	color: #444444;
-	font-size:0.875em;
-	height:26px;
-	padding-top:68px;
-	text-align:center;
-	width:94px;
 }
 
 div.pci_horizontal_line {
@@ -172,11 +203,40 @@ div.pci_horizontal_line {
 	width:100%;
 }
 
+a.pci_link_description {
+	color:#333333;
+	display:block;
+	font-family:pci_font_link_description;
+	font-size:0.9375em;
+}
+
 a.pci_link_footer {
-	color: #333333;
+	color:#6F6F6F;
 	font-family:pci_font_link_footer;
-	text-decoration:none;
-	text-shadow:1px 1px #DDDDDD;
+	font-size:0.875em;
+}
+
+a.pci_link_user_name {
+	color:#983636;
+	font-family:pci_font_link_user_name;
+	font-size:0.875em;
+}
+
+a.pci_link_user_name:hover {
+	color:#D84D4D;
+	text-decoration:underline;
+}
+
+span.pci_text_description {
+	color:#6F6F6F;
+	font-family:pci_font_text_description;
+	font-size:0.875em;
+}
+
+span.pci_text_footer {
+	color:#333333;
+	font-family:pci_font_text_footer;
+	font-size:0.875em;
 }
 
 
@@ -303,7 +363,7 @@ div.pci_header_bar_button {
 
 div.pci_information_footer_column_container {
 	float:right;
-	width:144px;
+	width:192px;
 }
 
 div.pci_information_footer_column_header {
@@ -384,4 +444,81 @@ div.pci_navigation_menu_button {
 	background-position:center center;
 	background-repeat:no-repeat;
 	box-shadow:0px 0px 64px 0px #CCEACD inset;
+}
+
+
+/*
+----------------------------------------------------------------------------------------------
+	Toolbar (Problems)
+----------------------------------------------------------------------------------------------
+*/
+
+#pci_toolbar_problems_container {
+}
+
+div.pci_toolbar_problems_button {
+	float:left;
+	margin-right:16px;
+}
+
+#pci_toolbar_problems_new_problem_button {
+	background-image:url('../img/new_problem_grayscale.png');
+	background-position:left center;
+	background-repeat:no-repeat;
+}
+
+#pci_toolbar_problems_new_problem_button:hover {
+	background-image:url('../img/new_problem_color.png');
+}
+
+
+/*
+----------------------------------------------------------------------------------------------
+	Toolbar (Problem)
+----------------------------------------------------------------------------------------------
+*/
+
+#pci_toolbar_problem_container {
+	
+}
+
+div.pci_toolbar_problem_button {
+	float:left;
+	margin-right:16px;
+}
+
+#pci_toolbar_problem_new_solution_button {
+	background-image:url('../img/new_solution_grayscale.png');
+	background-position:left center;
+	background-repeat:no-repeat;
+}
+
+#pci_toolbar_problem_new_solution_button:hover {
+	background-image:url('../img/new_solution_color.png');
+}
+
+
+/*
+----------------------------------------------------------------------------------------------
+	Toolbar (Solution)
+----------------------------------------------------------------------------------------------
+*/
+
+#pci_toolbar_solution_container {
+	
+}
+
+div.pci_toolbar_solution_button {
+	float:left;
+	margin-right:16px;
+}
+
+#pci_toolbar_solution_go_back_button {
+	background-image:url('../img/go_back_grayscale.png');
+	background-position:left center;
+	background-repeat:no-repeat;
+}
+
+#pci_toolbar_solution_go_back_button:hover {
+	background-image:url('../img/go_back_color.png');
 }
