Hidden floating form (nico) Input validation, datepicker, etc (gonza)

--- a/tmpl/Index.tmpl
+++ b/tmpl/Index.tmpl
@@ -14,6 +14,8 @@
 		<% template page_content() %>
 			<% include template_view::header_bar() %>
 			<div id="pci_index_main_container">
+			
+				<a href="<% url "/problems" %>" ><h2>Problemas</h2></a>
 				Comienzo content
 				<br />
 				<br />
