--- a/tmpl/Template.tmpl
+++ b/tmpl/Template.tmpl
@@ -50,7 +50,9 @@
 			<div id="pci_header_bar_main_container">
 				<div id="pci_header_bar_central_container">
 					<div id="pci_header_bar_logo_container">
-						<div id="pci_header_bar_logo"></div>
+						<a href="<% url "/" %>" >
+							<div id="pci_header_bar_logo"></div>
+						</a>
 					</div>
 					<div id="pci_header_bar_button_container">
 					 	<% if user_signed_in %>
@@ -65,8 +67,9 @@
 					 			</span>
 				 			</div>
 						<% else %>
-							<a href="<% url "/sign_in" %>">
-								<div class="pci_button_classic pci_header_bar_button">
+							<div id="pci_sign_in_floating_form"></div>
+							<!-- onclick="javascript:show_sign_in_form()" > --><a href="<% url "/sign_in" %>">
+								<div class="pci_button_classic pci_header_bar_button" id="pci_header_bar_button_sign_in">
 									Ingresar
 								</div>
 							</a>
@@ -174,6 +177,7 @@
 					</div>
 				</a>
 				<% if user_signed_in %>
+					<div class="pci_horizontal_line" ></div>
 					<a href="<% url "/user" using user_name %>">
 						<div class="pci_button_square pci_navigation_menu_button" id="pci_navigation_menu_profile_button">
 							Perfil
@@ -230,10 +234,15 @@
 
 		<% template css_links() %>
 			<link href="/css/template.css" rel="stylesheet" type="text/css" />
+			<link href="/css/ui-lightness/jquery-ui-1.9.2.custom.css" rel="stylesheet">
 		<% end template %>
 		
 		
 		<% template javascript_code() %>
+			function show_sign_in_form(){
+				$("#pci_sign_in_floating_form").toggle(300);
+				$("#pci_header_bar_button_sign_in").toggleClass('floating_form_visible');
+			}
 		<% end template %>
 		
 		
@@ -247,6 +256,7 @@
 				<head>
 					<% include css_links() %>
 					<script src="/js/jquery-1.9.0.min.js"></script>
+					<script src="/js/jquery-ui-1.9.2.custom.js"></script>
 					<script>
 						<% include javascript_code() %>
 					</script>
