--- a/www/css/template.css
+++ b/www/css/template.css
@@ -327,6 +327,35 @@ div.pci_header_bar_button {
 	margin:10px 0px 10px 8px;
 }
 
+#pci_header_bar_button_sign_in.floating_form_visible{
+	border-bottom-right-radius: 0px;
+	border-bottom-left-radius: 0px;
+}
+
+#pci_sign_in_floating_form{
+	display:none;
+	
+	position:absolute;
+	z-index:1500;
+	height:200px;
+	width:300px;
+	right:0px;
+	top:35px;
+	
+	background-color:white;
+	border: 1px solid #D0D0D0;
+	box-shadow:0px -4px 8px 0px #D1D1D1 inset;
+	
+	border-bottom-left-radius: 6px;
+	border-bottom-right-radius: 6px;
+	border-top-left-radius: 6px;
+}
+
+#pci_test_panel{
+	position:absolute;
+	min-width:1024px;
+	padding: 0px 128px;
+}
 
 /*
 ----------------------------------------------------------------------------------------------
