--- a/tmpl/Problems.tmpl
+++ b/tmpl/Problems.tmpl
@@ -30,7 +30,7 @@
 					<% foreach problem in *problems %>
 						<% item %>
 							<div class="pci_box_description pci_problems_problem_description">
-								<% include template_view::publication_description(problem) %>
+								<% include template_view::problem_description(problem) %>
 							</div>
 						<% end %>
 					<% empty %>
