--- a/tmpl/Solution.tmpl
+++ b/tmpl/Solution.tmpl
@@ -16,7 +16,7 @@
 			<% include template_view::navigation_menu() %>
 			<div id="pci_solution_main_container">
 				<div class="pci_box_container">
-					<% include template_view::toolbar_solution() %>
+					<% include template_view::toolbar_solution(problem_id) %>
 					<div class="pci_horizontal_line"></div>
 					<div id="pci_solution_header_container">
 						<h2>
